<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NBA Teams</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="theHint">Enter NBA team city</string>
    <string name="teamName">Team Name:</string>
    <string name="theAb">Abbreviation:</string>
    <string name="theArena">Arena:</string>
    <string name="theDiv">Division:</string>
    <string name="about">Visit My GitHub</string>
    <string name="placeHolder"></string>
    <string name="theinstruct">Select a NBA team:</string>
    <string name="go">Go</string>
    <string name="mvp">MVP</string>
    <string name="AM">About MadGeek</string>
    <string name="more">More NBA</string>
    <string name="kname">Kobe Bryant</string>
    <string name="kteam">L.A Lakers</string>
    <string name="kmvp">MVP 2007 to 2008</string>
    <string name="dname">Derrick Rose</string>
    <string name="dteam">Chicago Bulls</string>
    <string name="dmvp">MVP 2010 to 2011</string>
    <string name="lname">Lebron James</string>
    <string name="lteam">Miami Heat</string>
    <string name="MVPteam">Most Valued Players 2007 to 2013</string>
    <string name="lmvp">MVP 2008 to 2010 and 2011 to 2013</string>
    <string-array name="city_array">
        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Bobcats</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>Los Angeles Clippers</item>
        <item>Los Angeles Lakers</item>
        <item>Memphis Grizzlies</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thunder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>
        <item>Toronto Raptors</item>
        <item>Utah Jazz</item>
        <item>Washington Wizards</item>
    </string-array>

</resources>
