<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theinstruct" />
    <Spinner
        android:id="@+id/team_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/city_array" />

    <Button
        android:id="@+id/goBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TableLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/teamRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/teamName" />

            <TextView
                android:id="@+id/teamTxt"
                android:gravity="center_vertical"
                android:text="@string/placeHolder" />
        </TableRow>

        <TableRow
            android:id="@+id/abRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/theAb" />

            <TextView
                android:id="@+id/abTxt"
                android:gravity="center_vertical"
                android:text="@string/placeHolder" />
        </TableRow>

        <TableRow
            android:id="@+id/arenaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/theArena" />

            <TextView
                android:id="@+id/arenaTxt"
                android:gravity="center_vertical"
                android:text="@string/placeHolder" />
        </TableRow>

        <TableRow
            android:id="@+id/divRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/theDiv" />

            <TextView
                android:id="@+id/divTxt"
                android:gravity="center_vertical"
                android:text="@string/placeHolder" />
        </TableRow>
    </TableLayout>

</LinearLayout>